import("//chrome/common/features.gni")
import("//tools/grit/grit_rule.gni")

grit("qt_webengine_resources") {
  source = "qt_webengine_resources.grd"
  defines = chrome_grit_defines
  outputs = [
    "grit/qt_webengine_resources.h",
    "qt_webengine_resources.pak",
  ]
  output_dir = "$root_gen_dir/qtwebengine"
}

source_set("qtwebengine_content_browser_overlay_manifest") {
  sources = [
    "//qtwebengine/browser/qtwebengine_content_browser_overlay_manifest.cc",
    "//qtwebengine/browser/qtwebengine_content_browser_overlay_manifest.h",
  ]

  deps = [
    "//base",
    "//services/service_manager/public/cpp",
  ]
}

source_set("qtwebengine_content_renderer_overlay_manifest") {
  sources = [
    "//qtwebengine/browser/qtwebengine_content_renderer_overlay_manifest.cc",
    "//qtwebengine/browser/qtwebengine_content_renderer_overlay_manifest.h",
  ]

  deps = [
    "//base",
    "//services/service_manager/public/cpp",
  ]
}

source_set("service_manifests") {
  public_deps = [
    ":qtwebengine_content_browser_overlay_manifest",
    ":qtwebengine_content_renderer_overlay_manifest",
  ]
}

group("resources") {
  deps = [
    ":qt_webengine_resources",
  ]
}
